--- a/game/public/style/home.css
+++ b/game/public/style/home.css
@@ -1,5 +1,10 @@
 body {
+    margin: 0;
+    padding: 0;
     background-image: url('../assets/background.png');
-    background-size: cover;
+    background-size: cover;     
     background-position: center;
+    font-family: Arial, sans-serif;
+    color: white;
 }
+  
