--- a/game/public/style/home.css
+++ b/game/public/style/home.css
@@ -32,7 +32,8 @@ body {
   background-color: #28a745;  
   color: #fff;
   border: 2px solid white;
-  border-radius: 8px;
+  border-radius: 50px;
+  box-shadow: 5px 5px 10px black;
   cursor: pointer;
   font-weight: bold;
 }
@@ -53,7 +54,8 @@ body {
   background-color: #28a745;
   color: #fff;
   border: 2px solid white;
-  border-radius: 5px;
+  border-radius: 50px;
+  box-shadow: 2px 2px 10px black;
   cursor: pointer;
   font-weight: bold;
 }
