--- a/game/public/style/leaderboard.css
+++ b/game/public/style/leaderboard.css
@@ -44,12 +44,13 @@ body {
 }
   
 .home-button {
-    padding: 10px 25px;
-    font-size: 1rem;
-    background-color: #ffffffcc;
-    color: #000;
-    border: none;
-    border-radius: 5px;
+    padding: 20px 40px;
+    font-size: 2rem;
+    background-color: #28a745;  
+    color: #fff;
+    border: 2px solid white;
+    border-radius: 50px;
+    box-shadow: 5px 5px 10px black;
     cursor: pointer;
     font-weight: bold;
 }
